--- a/.gitignore
+++ b/.gitignore
@@ -1,25 +1,10 @@
-# Dependencies
+# Node
 node_modules/
 **/node_modules/
 
 # Logs
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
+*.log
 
-# Runtime
-.env
-.env.*
-
-# Build
-dist/
-build/
-
-# OS & editors
+# OS
 .DS_Store
 Thumbs.db
-.vscode/
-.idea/
-
-# Docker
-docker-compose.override.yml
