--- a/frontend/default.conf
+++ b/frontend/default.conf
@@ -8,7 +8,7 @@ server {
   }
 
   location /api/ {
-    proxy_pass http://api:5000/;
+    proxy_pass http://backend:5000;
     proxy_set_header Host $host;
     proxy_http_version 1.1;
     proxy_set_header Upgrade $http_upgrade;
