--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -1,19 +1,30 @@
 server {
   listen 80;
 
-  # Serve frontend static files
+  # Proxy frontend (served by the `frontend` service) so root host:80 -> frontend
   location / {
-    root /usr/share/nginx/html;
-    index index.html;
-    try_files $uri /index.html;
+    proxy_pass http://frontend:80;
+    proxy_http_version 1.1;
+    proxy_set_header Upgrade $http_upgrade;
+    proxy_set_header Connection 'upgrade';
+    proxy_set_header Host $host;
+    proxy_cache_bypass $http_upgrade;
   }
 
   # Proxy API requests to backend
   location /api/ {
-    proxy_pass http://backend:5000/;
+    proxy_pass http://backend:5000;
     proxy_http_version 1.1;
     proxy_set_header Upgrade $http_upgrade;
     proxy_set_header Connection 'upgrade';
+    proxy_set_header Host $host;
+    proxy_cache_bypass $http_upgrade;
+  }
+
+  # Proxy health check to backend
+  location = /health {
+    proxy_pass http://backend:5000/health;
+    proxy_http_version 1.1;
     proxy_set_header Host $host;
     proxy_cache_bypass $http_upgrade;
   }
