test(frontend): add basic test; ci: run frontend tests

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,6 +18,9 @@ jobs:
       - name: Install frontend deps
         working-directory: ./frontend
         run: npm ci
+      - name: Run frontend tests
+        working-directory: ./frontend
+        run: npm test -- --watchAll=false
       - name: Build frontend
         working-directory: ./frontend
         run: npm run build
